--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: simple-webapp
-          image: docker.io/andhikadananugraha/webapp:2212210801
+          image: docker.io/andhikadn11/webapp:2212210801
           ports:
             - containerPort: 80
 
