--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: simple-webapp
-          image: docker.io/andhikadn11/webapp:v1.0.0
+          image: docker.io/andhikadn11/webapp:2212211417
           ports:
             - containerPort: 80
 
